frontend/src/styles/Bubbles.css
/* .bubbles {
    padding: 4rem;
    background: #fff;
}

h1 {
    text-align: center;
}

.bubbles-container {
    display: flex;
    flex-flow: column;
    align-items: center;
    max-width: 1120px;
    width: 90%;
    margin: 0 auto;
}

.bubbles-items {
    margin-bottom: 24px;
}

.bubbles-item-text {
    color: black;
    font-size: 18px;
    line-height: 24px;
} */

.topContainer {
	display: flex;
	justify-content: space-between;
}

.bubble {
	width: 200px;
	background: white;
	padding: 20px;
	border-radius: 25px;
	border: black;
	position: relative;
	margin: 0.5em;
	box-shadow: 5px 5px 7px 2px rgba(157, 157, 157, 0.219);
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	/* flex-grow: 1; */
}

.bubble:hover {
	transform: scale(1.05);
}

.bubble-container {
	display: flex;
	flex-wrap: wrap;
	justify-content: space-evenly;
	gap: 1em;
}

.text {
	font-size: 11px;
	text-align: left;
	line-height: 3.5ch;
}

.title {
	font-size: 15px;
	font-weight: bold;
}

.author {
	font-size: 12px;
	font-style: italic;
	color: rgb(94, 94, 196);
}

.about {
	text-align: left;
	font-weight: 500;
	line-height: 2ch;
}

/* .heart {
	display: flex;
	position: absolute;
	right: 15px;
	top: 15px;
} */

.heart:hover {
	transform: scale(1.05);
}

.linking {
	text-align: left;
}

.linking a {
	font-weight: bold;
	text-decoration: none;
	background-color: #faebd7;
	padding: 0.4rem 2rem;
	border-radius: 2rem;
	color: black;
	transition: all 0.15s ease-out;
}

.linking a:hover {
	background-color: #d58011;
	color: white;
}

